force-app/main/default/objects/E_MOC_Result__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document Require Checklist</fullName>
                </value>
                <value>
                    <fullName>Hazard Screen Checklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Result</relationshipLabel>
        <relationshipName>E_MOC_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Help_text__c</fullName>
        <label>Help text</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MROA</fullName>
                </value>
                <value>
                    <fullName>MROB</fullName>
                </value>
                <value>
                    <fullName>MROC</fullName>
                </value>
                <value>
                    <fullName>MMLF</fullName>
                </value>
                <value>
                    <fullName>MMLD</fullName>
                </value>
                <value>
                    <fullName>MPOF</fullName>
                </value>
                <value>
                    <fullName>MFOP</fullName>
                </value>
                <value>
                    <fullName>TNPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_No__c</fullName>
        <label>Question No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Operations Document</fullName>
                </value>
                <value>
                    <fullName>Technologist Document</fullName>
                </value>
                <value>
                    <fullName>Hazard screen checklist</fullName>
                </value>
                <value>
                    <fullName>Common document</fullName>
                </value>
                <value>
                    <fullName>Process Control Document</fullName>
                </value>
                <value>
                    <fullName>Instrument Engineering Document</fullName>
                </value>
                <value>
                    <fullName>Stationary Equipment and Piping Document</fullName>
                </value>
                <value>
                    <fullName>Rotating Document</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Common</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Driver/Actuator (process) at Valve (e.g. Motor, MOV)</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Electrical equipment/system</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Emergency Backup Systems (UPS for Fire &amp; Gas and UPS for DCS, Motor of Firewater pump, Emergency Generator, Emergency lighting, remote fire fighting control equipment))</fullName>
                </value>
                <value>
                    <fullName>Electrical and Telecommunication Document Comunication (e.g. talk-back, CCTV, radio, public announce and telecomunication network)</fullName>
                </value>
                <value>
                    <fullName>Maintenance document</fullName>
                </value>
                <value>
                    <fullName>Civil and Structure document</fullName>
                </value>
                <value>
                    <fullName>Combustion document</fullName>
                </value>
                <value>
                    <fullName>HSE document</fullName>
                </value>
                <value>
                    <fullName>Process Safety and Fire Safety document</fullName>
                </value>
                <value>
                    <fullName>Environment document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes</label>
        <type>Checkbox</type>
    </fields>
    <label>E-MOC Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>E_MOC_Application__c</columns>
        <columns>Question__c</columns>
        <columns>Remark__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EMO-{000000000}</displayFormat>
        <label>E-MOC Result No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>